SERVER-25887 fix autocomplete for NumberLong